apps/arr/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: arr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: overseerr
      app: overseerr
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: overseerr
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: linuxserver/overseerr:v1.33.2-ls133
          ports:
            - name: overseerr
              containerPort: 5055
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          hostPath:
            path: /var/data/persistence/arr/overseerr
            type: DirectoryOrCreate
