apps/arr/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr-service
  namespace: arr
  labels:
    app.kubernetes.io/name: overseerr
    app: overseerr
spec:
  ports:
    - port: 5055
      targetPort: overseerr
      name: overseerr
  selector:
    app.kubernetes.io/name: overseerr
    app: overseerr
