apps/arr/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress
  namespace: arr
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.8.222
#    traefik.ingress.kubernetes.io/router.entrypoints: local
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: overseerr.boomerok.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr-service
                port:
                  name: overseerr
  tls:
    - secretName: overseerr-tls
      hosts:
        - overseerr.boomerok.dev
